--- a/CryptoCurrencyManager/app/src/main/res/values/colors.xml
+++ b/CryptoCurrencyManager/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="background">#885E5B</color>
+    <color name="currency_card_background">#A27A78</color>
 </resources>
