--- a/TodoApplication/app/src/main/res/values/colors.xml
+++ b/TodoApplication/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#283593</color>
+    <color name="colorPrimaryLight">#5F5FC4</color>
+    <color name="colorPrimaryDark">#001064</color>
+    <color name="colorSecondary">#ffffff</color>
 </resources>
