--- a/TodoApplication/app/src/main/res/layout/todo_task_layout.xml
+++ b/TodoApplication/app/src/main/res/layout/todo_task_layout.xml
@@ -2,26 +2,41 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="80dp"
     android:layout_margin="18dp"
     android:padding="8dp"
-    android:orientation="vertical">
+    android:orientation="horizontal"
+    android:background="@android:color/white">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
-        android:textSize="24sp"
-        android:text="DummyTitle"/>
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:text="This is my Dummy Description for this Dummy Todo Task! Please ignore this values!"/>
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            android:textSize="24sp"
+            android:text="DummyTitle"/>
 
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:text="This is my Dummy Description for this Dummy Todo Task! Please ignore this values!"/>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/delete_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:backgroundTint="@android:color/holo_red_light"
+        android:text="delete"/>
 
 </LinearLayout>
