--- a/TodoApplication/app/src/main/res/layout/activity_main.xml
+++ b/TodoApplication/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/cardview_dark_background"
+        android:background="@color/colorSecondary"
         tools:listitem="@layout/todo_task_layout"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
