--- a/TodoApplication/app/src/main/res/layout/todo_task_layout.xml
+++ b/TodoApplication/app/src/main/res/layout/todo_task_layout.xml
@@ -1,42 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:layout_margin="18dp"
-    android:padding="8dp"
-    android:orientation="horizontal"
-    android:background="@android:color/white">
+    android:layout_margin="8dp"
+    app:cardCornerRadius="8dp"
+    android:backgroundTint="@color/cardview_dark_background">
 
     <LinearLayout
-        android:layout_weight="1"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_margin="8dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/completed_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="12dp"
+            android:src="@drawable/ic_check_circle_white_24dp"/>
 
         <TextView
             android:id="@+id/title"
-            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@android:color/black"
+            android:text="@string/todo_task_layout_dummy_title"
             android:textSize="24sp"
-            android:text="DummyTitle"/>
-
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:text="This is my Dummy Description for this Dummy Todo Task! Please ignore this values!"/>
+            android:textStyle="bold"
+            android:textColor="@color/colorSecondary"/>
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/delete_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:backgroundTint="@android:color/holo_red_light"
-        android:text="delete"/>
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
