--- a/TodoApplication/app/src/main/res/values/colors.xml
+++ b/TodoApplication/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryLight">#5F5FC4</color>
     <color name="colorPrimaryDark">#001064</color>
     <color name="colorSecondary">#ffffff</color>
+    <color name="colorBackground">#e5ffff</color>
 </resources>
